# xacro_live

./: .gitattributes  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
.github/workflows/: action-ros-ci.yaml  action-ros-lint.yaml
launch/: xacro_live_view.launch.py
rviz/: view_robot.rviz
scripts/: xacro_live.py
test/: conftest.py  test_copyright.py  test_flake8.py  test_pep257.py  test_xacro_live_view_launch.py  test_xacro_observer.py  test_xacro_tree.py  test_xacro_update_handler.py
test/urdf/: robot.xacro
test/urdf/snippets/: arm_link.xacro  wheel.xacro
xacro_live/: __init__.py  robot_description_client.py  xacro_live_node.py  xacro_observer.py  xacro_tree.py  xacro_update_handler.py
