<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>xacro_live</name>
  <version>0.0.1</version>
  <description>Tool to update the robot_description dinamically from updates on a target xacro file</description>

  <maintainer email="mateus.amarujo@gmail.com">Mateus Amarante</maintainer>
  <maintainer email="ivan1993br@gmail.com">Ivan Tarifa</maintainer>
  <maintainer email="caioaamaral@gmail.com">Caio Amaral</maintainer>

  <license>Apache License 2.0</license>

  <author email="mateus.amarujo@gmail.com">Mateus Amarante</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3-watchdog</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend condition="$ROS_DISTRO == dashing">python3-lxml</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
